Spacing fixed

--- a/Facial-Recognition.css
+++ b/Facial-Recognition.css
@@ -161,7 +161,7 @@
  }
 
  .u-section-6 .u-sheet-1 {
-   min-height: 2250px;
+   min-height: 2100px;
    margin-bottom: 0;
  }
 
